<resources>
    <string name="app_name">QR Scanner</string>
    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoic3VsZW1hbmJhandhIiwiYSI6ImNsa2pxenk0MzBpdmszaG5lMHJqcDZyMXAifQ.2VebsAokmpQmPov3lWiz-Q</string>
    <string name="Signature_ads">4034a75ca5bbb9e42c0a013d8518a53f</string>
    <string name="per_month_subscription">free.qr.code.scanner.generator.plan1</string>
    <string name="_4_39_month">$1.99 / Month</string>
    <string name="per_year_subscription">free.qr.code.scanner.generator.plan2</string>
    <string name="_13_99_year">$16.99 / Year ($ 1.4 / Month)\n7 days free trial</string>
    <string name="one_time_purchase">free.qr.code.scanner.generator.plan3</string>
    <string name="_42_99_one_time_purchase">$42.99 / One-Time Purchase</string>
    <string name="scan">Scan</string>
    <string name="create">Create</string>
    <string name="business">Business</string>
    <string name="privacy_policy">https://whatsappwebapp.blogspot.com/2019/08/privacy-policy-whatscan-for-whatsapp-web.html</string>
    <string name="dialog_message">Are you sure you want to discard your changes?</string>
    <string name="dialog_title">Discard Changes</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="feedback_title">Tell us the problem you encountered</string>
    <string name="feedback_type">Type</string>
    <string name="type1">Scanning not working</string>
    <string name="type2">Too many ads</string>
    <string name="type3">Need more information after scanning</string>
    <string name="type4">Others</string>
    <string name="feedback_details">Please tell us more details so that we can locate and solve your problem faster (atleast 6 characters)</string>
    <string name="our_email_id">rawdev4@gmail.com</string>
    <string name="email_subject">I don\'t like it.</string>
    <string name="email_body">Make some appropriate changes\!</string>
    <string name="event_date">02 March To 13 March</string>
    <string name="event_city">City address,street\nhome location goes here</string>
    <string name="bold_txt">Bold</string>
    <string name="shadow_tx">Shadow</string>
    <string name="edit_title">Edit B-Card</string>
    <string name="demo_email">abc@website.com</string>
    <string name="lat">Latitude:</string>
    <string name="lng">Longitude:</string>
    <string name="msg">Hello EveryOne</string>
    <string name="your_name">Your Name</string>
    <string name="username">Your Username</string>
    <string name="username_url">www.website.com/username</string>
    <string name="note">Everytime I make a wish, I wish for us</string>
    <string name="title">Your Title</string>
    <string name="title_url">www.website.com</string>
    <string name="type">Type:</string>
    <string name="ssid">SSID:</string>
    <string name="artist_name">Artist Name</string>
    <string name="artist_song">Artist Song</string>
    <string name="add_contact">ADD CONTACT</string>
    <string name="facebook_url">Enter facebook url here\!</string>
    <string name="insta_url">Enter Instagram url here\!</string>
    <string name="paypal_url">Enter PayPal url here\!</string>
    <string name="twitter_url">Enter Twitter url here\!</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="if_you_appreciate_it_please_give_up_5_star">If you appreciate it,please give up 5 star</string>
    <string name="signature_title">Remove All ads</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_code_reader">QR Code Reader</string>
    <string name="youtube">Youtube</string>
    <string name="barcode">Barcode</string>
    <string name="url">Url</string>
    <string name="text">Text</string>
    <string name="wifi">WiFi</string>
    <string name="contact">Contacts</string>
    <string name="location">Location</string>
    <string name="sms">SMS</string>
    <string name="event">Calender</string>
    <string name="clipboard">Clipboard</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="card">My Card</string>
    <string name="calender">Calender</string>
    <string name="paypal">PayPal</string>
    <string name="insta">Instagram</string>
    <string name="viber">Viber</string>
    <string name="twitter">Twitter</string>
    <string name="spotify">Spotify</string>
    <string name="remove_ad">remove ad</string>
    <string name="flash">flash</string>
    <string name="scan_qr">Scan Qr</string>
    <string name="generate_qr">Generate QR</string>
    <string name="history">History</string>
    <string name="setting">Settings</string>
    <string name="back_button">back button</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="generate">Generate</string>
    <string name="texthint">Enter text here\!</string>
    <string name="urlhint">Enter url here\!</string>
    <string name="ssid_network_name">SSID/Network Name</string>
    <string name="password">Password</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="name">Name</string>
    <string name="create_title">QR Code Creator</string>
    <string name="beep">Sound</string>
    <string name="beep_msg">Turn on/off mobile sound</string>
    <string name="auto_clipboard">Auto-copies to clipboard</string>
    <string name="vibrate">Vibration</string>
    <string name="search">Search Engines</string>
    <string name="language">Language Options</string>
    <string name="feedback">Feedback</string>
    <string name="policy">Privacy Policy</string>
    <string name="auto_clipboard_txt">Turn on/off auto copy to clipboard</string>
    <string name="vibrate_txt">Turn on/off mobile vibration</string>
    <string name="delete_history">Delete History</string>
    <string name="policy_txt">Read our Privacy Policy carefully</string>
    <string name="share_txt">Share QR app with your friends</string>
    <string name="rate_us_txt">Let us know about QR app</string>
    <string name="rate_us">Rate Us</string>
    <string name="delete_txt">Delete all previous history</string>
    <string name="product">Product Details</string>
    <string name="product_txt">Show product information</string>
    <string name="save_history">Save History</string>
    <string name="save_history_txt">Turn on/off save history</string>
    <string name="web_search">Auto Web Search</string>
    <string name="web_search_txt">Turn on/off save history</string>
    <string name="mode1">Scan Mode : Batch Scanning</string>
    <string name="mode1_txt">Turn on/off batch scanning</string>
    <string name="mode2">Scan Mode : Manual Scanning</string>
    <string name="mode2_txt">Turn on/off manual scanning</string>
    <string name="mode3">Scan Mode : Normal Scanning</string>
    <string name="duplicate">Duplicate QR/Barcode</string>
    <string name="duplicate_txt">Save duplicate QR/Barcode </string>
    <string name="camera">Camera</string>
    <string name="camera_txt1">Back Camera 1 - Recommended </string>
    <string name="camera_txt2">Front Camera 2</string>
    <string name="display_settings">Display Settings</string>
    <string name="g_settings">General</string>
    <string name="help">App Settings</string>
    <string name="theme">Change Theme</string>
    <string name="theme1">Dark Theme</string>
    <string name="theme2">Light Theme</string>
    <string name="edit">Edit</string>
    <string name="phone">Phone</string>
    <string name="organization">Organization</string>
    <string name="address">Address</string>
    <string name="enter_latitude_here">Enter Latitude here\!</string>
    <string name="enter_longitude">Enter Longitude here\!</string>
    <string name="location_name_here">Location Name here</string>
    <string name="text_message_here">Text Message here\!</string>
    <string name="phone_number">Enter Phone Number here\!</string>
    <string name="youtube_link_here">Enter youtube url here\!</string>
    <string name="event_name">Event Name</string>
    <string name="select_date">Select date</string>
    <string name="end_date_time">End Date/Time</string>
    <string name="select_time">Select time</string>
    <string name="start_date_time">Start Date/Time</string>
    <string name="zoom_image">zoom image</string>
    <string name="gallery_image">gallery image</string>
    <string name="result_pic">result pic</string>
    <string name="qr_image">QR image</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="email">E-mail</string>
    <string name="dial">Dial</string>
    <string name="delete">Delete</string>
    <string name="scannerlogo">scannerlogo</string>
    <string name="exit">Exit</string>
    <string name="cancel_image">cancel image</string>
    <string name="signature">98df6424f2d2a30084659bb55aa10a84</string>
    <string name="history_is_empty">History is empty\!</string>
    <string name="continue2">Continue</string>
    <string name="subscription_policy">Payment will be charged to your Google play Account at confirmation of purchase. Subscription auto-renew before the end of the current period.unless canceled 24-hours in advance, and the cancellation takes effect at the end of the current period. You may manage your subscription and turned off auto renewal from your Google Play store account setting subscription canceled during the trial will not be charged. Privacy Policy </string>
    <string name="enjoying_qr_scanner">Enjoying QR Scanner</string>
    <string name="adsubscribed">AdSubscribed</string>
    <string name="select_lang">Choose Language</string>
    <string name="google_link" translatable="false"><u>www.google.com</u></string>
    <string name="clear_all">Clear All</string>
    <string name="empty">Empty</string>
    <string name="let_s_start_to_scan_some_codes">Let\'s start to scan some codes</string>
    <string name="scan_now">Scan Now</string>
    <string name="let_s_start_to_create_some_codes">Let\'s start to create some codes</string>
    <string name="create_now">Create Now</string>
    <string name="let_s_start_to_create_some_cards">Let\'s start to create some cards</string>
    <string name="generate_a_barcode_from_any_product_or_item_for_easy_scanning">Generate a barcode from any product or item for easy scanning!</string>
    <string name="bold_unbold">Bold/Unbold</string>
    <string name="quickly_switch_between_bold_and_regular_weight">Quickly switch between bold and regular weight</string>
    <string name="add_remove_shadow">Add/Remove Shadow</string>
    <string name="tailor_your_text_to_suit_your_style">Tailor your text to suit your style</string>
    <string name="change_text_color">Change Text Color</string>
    <string name="select_text_first">(Select text first)</string>
    <string name="your_business_card">Your Business Card</string>
    <string name="capture_and_share_contact_details_effortlessly_with_a_qr_code">Capture and share contact details effortlessly with a QR code!</string>
    <string name="transform_your_email_into_a_qr_code_and_connect_instantly">Transform your email into a QR code and connect instantly!</string>
</resources>