<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FeedbackActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal"
                android:id="@+id/toolbar">
                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:onClick="backFeedback" />

            </LinearLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/toolbar"
                android:src="@drawable/review"
                android:id="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_title"
                android:layout_below="@+id/imageView"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/text1"
                android:textColor="@color/black"/>

            <LinearLayout
                android:id="@+id/center_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/text1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <TextView
                    android:id="@+id/type1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/barcodeColor"
                    android:padding="8dp"
                    android:text="@string/type1"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/type2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/barcodeColor"
                    android:padding="8dp"
                    android:text="@string/type2"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/type3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/barcodeColor"
                    android:padding="8dp"
                    android:text="@string/type3"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/type4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/barcodeColor"
                    android:padding="8dp"
                    android:text="@string/type4"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/center_layout"
                android:layout_alignParentBottom="true"
                android:padding="20dp"
                android:background="@color/barcodeColor"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/type1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:text="@string/feedback_details"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#cccccc"
                    android:padding="10dp"
                    android:layout_marginTop="8dp"
                    android:src="@android:drawable/ic_menu_camera"
                    android:tint="@color/black" />


            </LinearLayout>



        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>