<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/white">

    <RadioGroup
        android:id="@+id/rgRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:button="@drawable/custom_radio_button"
            android:checked="false"
            android:buttonTint="#5ED9EF"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:text="@string/_4_39_month"
            android:textSize="14sp"
            android:onClick="checkButton"
            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:button="@drawable/custom_radio_button"
            android:checked="true"
            android:textColor="@color/black"
            android:onClick="checkButton"
            android:layoutDirection="rtl"
            android:buttonTint="#5ED9EF"
            android:text="@string/_13_99_year"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:button="@drawable/custom_radio_button"
            android:checked="false"
            android:textColor="@color/black"
            android:onClick="checkButton"
            android:layoutDirection="rtl"
            android:text="@string/_42_99_one_time_purchase"
            android:textSize="14sp"
            android:textStyle="bold"
            android:buttonTint="#5ED9EF"/>


    </RadioGroup>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        app:layout_constraintDimensionRatio="H,1:4"
        style="@style/buttonView"
        android:text="@string/continue2"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_below="@+id/rgRight"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgRight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonContinue"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:id="@+id/tv_ad_terms"
        />
</RelativeLayout>