<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.moutamid.qr.scanner.generator.Activities.ScanResultActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_history"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:onClick="backResult"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_history">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_head"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_contact"
            android:contentDescription="@string/result_pic" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Hello EveryOne, Hope you are doing well"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <TextView
            android:id="@+id/tv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/contact"
            android:layout_marginLeft="6dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/imageqr"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_head"
        android:contentDescription="@string/qr_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spanCount="3"
            tools:listitem="@layout/button_result_recycler_layout" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save"
                android:backgroundTint="@color/teal_200"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:id="@+id/share"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/save"
                android:backgroundTint="@color/teal_200"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/delete"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/save"
                android:backgroundTint="@color/teal_200"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/email"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/share"
                android:layout_toRightOf="@+id/delete"
                android:backgroundTint="@color/teal_200"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dial"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delete"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/teal_200"
                android:text="@string/dial"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_contact"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/dial"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/teal_200"
                android:text="@string/add_contact"
                android:textColor="@color/white" />



        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ad_container"
        app:layout_constraintDimensionRatio="5:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".25"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/result_data_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/ad_container"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.consoliads.mediation.bannerads.CAMediatedBannerView
            android:id="@+id/consoli_banner_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>